--- a/ListenUp/View/Base.lproj/Main.storyboard
+++ b/ListenUp/View/Base.lproj/Main.storyboard
@@ -41,6 +41,14 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtE-sT-HpB">
+                                <rect key="frame" x="50" y="190" width="314" height="314"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="userSubmittedDetails:" destination="BYZ-38-t0r" eventType="touchDragOutside" id="cRh-cT-6cr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -48,14 +56,18 @@
                             <constraint firstItem="Ecv-O5-R2I" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="4sb-4j-ATJ"/>
                             <constraint firstItem="KmH-ka-N8o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7le-Lh-6HD"/>
                             <constraint firstItem="Hts-Ht-yfN" firstAttribute="top" secondItem="KmH-ka-N8o" secondAttribute="bottom" priority="750" constant="50" id="BQi-4x-9mJ"/>
+                            <constraint firstItem="WtE-sT-HpB" firstAttribute="top" secondItem="Hts-Ht-yfN" secondAttribute="top" id="BrX-1z-UHc"/>
                             <constraint firstItem="Hts-Ht-yfN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="900" constant="50" id="DOo-XW-8iI"/>
                             <constraint firstItem="Ecv-O5-R2I" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FF6-FK-KXC"/>
                             <constraint firstItem="KmH-ka-N8o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JPk-i7-0m6"/>
                             <constraint firstAttribute="bottom" secondItem="Ecv-O5-R2I" secondAttribute="bottom" id="QgT-nw-Mga"/>
                             <constraint firstItem="KmH-ka-N8o" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XQZ-6z-vm7"/>
                             <constraint firstItem="Hts-Ht-yfN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="900" id="efN-Mh-1PY"/>
+                            <constraint firstItem="WtE-sT-HpB" firstAttribute="width" secondItem="Hts-Ht-yfN" secondAttribute="width" id="ejM-DN-x0X"/>
                             <constraint firstItem="Hts-Ht-yfN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" priority="900" id="jHn-VX-nbM"/>
                             <constraint firstItem="Ecv-O5-R2I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kua-7d-TPM"/>
+                            <constraint firstItem="WtE-sT-HpB" firstAttribute="height" secondItem="Hts-Ht-yfN" secondAttribute="height" id="umB-h2-t2m"/>
+                            <constraint firstItem="WtE-sT-HpB" firstAttribute="leading" secondItem="Hts-Ht-yfN" secondAttribute="leading" id="vbe-uB-bhH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="JellyClub" id="SEP-VQ-NdP"/>
@@ -66,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1030" y="799"/>
+            <point key="canvasLocation" x="1028.985507246377" y="798.88392857142856"/>
         </scene>
         <!--Feed View Controller-->
         <scene sceneID="nkO-0R-Pdd">
